fixing align and justify content on menu page

--- a/menustyles.css
+++ b/menustyles.css
@@ -20,8 +20,8 @@ body{
 .menu_page_container{
     display: grid;
     
-    grid-template-rows: 1fr auto;
-    grid-template-columns: 1fr;
+    grid-template-rows: 60px auto auto auto auto 60px;
+    grid-template-columns: 1fr 1fr;
 
 }
 
@@ -83,26 +83,39 @@ li a{
 
 }
 
-/* MAIN */
-.main{
-    grid-column: 1;
+/* COFFEE AROMA h1 */
+.coffee_aroma{
     grid-row: 1;
+    grid-column: 2;
+    font-size: 2.5em;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
+    width: 340px;
+    height: 55px;
 
+    padding: 0px 4px;
+
+    
+    border-left: double 8px #EADDC4;
+    border-bottom: double 8px #EADDC4; 
+    border-radius: 10px;
+
+    text-shadow: 4px 2px rgba(0, 0, 0, 0.788);
+
+    align-self: center;
+    justify-self: center;
 }
-h1{
+
+/* MENU h1 */
+.menu{
+    
+    grid-column: 1;
+    grid-row: 2;
+
     font-size: 4em;
 
     width: 260px;
     height: 75px;
     
-    grid-column: 1;
-    grid-row: 1 /  2;
-
-    margin: 74px;
     padding: 0 10px 80px 0;
     
     border-right: double 8px #EADDC4;
@@ -111,18 +124,23 @@ h1{
 
     text-align: end;
     justify-self: end;
-    align-self: end;
+    align-self: center;
 
     text-shadow: 4px 2px rgba(0, 0, 0, 0.788);
 }
+
+/* PASTRIES */
 .pastries{
-    grid-row:1 / span 2;
+    grid-row:2;
     grid-column: 2;
 
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 1fr;
+
 }
+
+/* COFFEE */
 .coffee{
     grid-row: 3;
     grid-column: 1;
@@ -132,6 +150,8 @@ h1{
     grid-template-rows: auto 1fr;
 
 }
+
+/* TEA */
 .tea{
     grid-row: 4;
     grid-column: 2;
@@ -141,6 +161,7 @@ h1{
     grid-template-rows: auto 1fr;
 
 }
+
 .h2 {
     grid-row: 1;
     grid-column: 1 / 3;
@@ -166,6 +187,8 @@ li{
     font-size: 24px;
     list-style-type: none;
 }
+
+/* PIC BOT LEFT */
 .pic_bot_left{
     grid-row: 4;
     grid-column: 1;
@@ -182,6 +205,8 @@ li{
     align-content: center;
     text-align: center;
 }
+
+/*PIC MID RIGHT */
 .pic_mid_right{
     grid-row: 3;
     grid-column: 2;
@@ -192,8 +217,6 @@ li{
 
     background-color: black;
 
-    box-shadow: 8px 8px black;
-
     display: grid;
     justify-content: center;
     align-content: center;
@@ -201,15 +224,15 @@ li{
 }
 
 /* FOOTER */
-.footer{
-    grid-row: 2;
-    grid-column: 1;
+.footer span, .footer p{
+    grid-row: 5 / span;
+    grid-column: 1 / span;
     display: grid;
 
+    align-self: center;
     background-color: rgba(252, 108, 5, 0.192);
     text-align: center;
 
-    
     border-top: double 8px #EADDC4;
 }
 
